test/data/semantic-errors/buulArithmatic.derp
buul x = tru derp
buul y = foos derp
pront x + y derp